Display trending or searched movies using TanstackQuery.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest --coverage"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.23",
     "jsdom": "^24.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
