--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tanstack/react-query": "^5.51.23",
     "jsdom": "^24.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
