--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest --coverage"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@tanstack/react-query": "^5.51.23",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
